main.css
/* 514 49th St Sunse Terrace */
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;900&display=swap');

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  color: #fff;
  font-family: 'Roboto', sans-serif;
}
body {
  background-image: url(./assets/raw-images/bg.jpg);
  background-size: cover;
  background-repeat: no-repeat;
  background-attachment: fixed;
  background-position: center;
}
.container-fluid {
  /* outline: 2px solid #fff; */

  display: flex;
  flex-direction: column;
  align-items: center;

  padding-bottom: 5rem;
}
.greeting-quote-container {
  /* outline: 2px solid #fff; */

  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 2rem;
  padding-top: 5rem;
}
#greeting {
  font-size: 3.5rem;
  font-weight: 900;
  color: #fff;
}
.quote-container {
  /* outline: 2px solid #fff; */

  display: flex;
  flex-direction: column;
  font-style: italic;
}
#quote-author {
  align-self: flex-end;
}
.temperature-and-covid-container {
  /* outline: 2px solid #fff; */

  display: flex;
  flex-direction: row;
  justify-content: center;
  flex-wrap: wrap;
  gap: 5rem;

  padding-top: 5rem;
}
.widgets {
  background-color: rgba(255, 255, 255, 0.2);
  border-radius: 5px;
  
  width: 30em;
  height: 20em;
  /* padding: 5rem; */
}
/* #blur {
  background-image: url(./assets/raw-images/bg.jpg);
  background-size: cover;
  background-repeat: no-repeat;
  background-attachment: fixed;
  background-position: center;

  height: 100%;
  width: 100%;
  filter: blur(5px);
  border-radius: 5px;
} */
@media screen and (max-width: 1000px) {
  #quote-author {
    align-self: center;
  }
  #greeting {
    font-size: 2.5rem;
  }
  #quote {
    text-align: center;
  }
}

